# simple_network

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  Client.cc  Client.h  Connection.h  EnumParser.h  Exception.h  Locker.h  Logger.cc  Logger.h  NetworkAction.h  NetworkVariable.h  Packet.cc  Packet.h  PacketProcessor.h  Poll.cc  Poll.h  PollFd.h  Query.h  SSLConnection.cc  SSLConnection.h  Serializing.cc  Serializing.h  Server.cc  Server.h  Session.h  SimpleTcpConnection.cc  SimpleTcpConnection.h  Socket.h  SocketLevel.h  Vector2.h
lib/unix/: unix_locker.cc  unix_socket.cc
lib/win32/: Win32Locker.h  win32_locker.cc
simpleMessanger/: Actions.h  CMakeLists.txt  ClientMessagesProcessor.cc  ClientMessagesProcessor.h  DialogWindow.cc  DialogWindow.h  DialogWindowMoc.cc  MessagesProcessor.cc  MessagesProcessor.h  Variables.h  ViewController.h  addressbook_moc.cc  client.cc  client_moc.cc  server.cc
simpleMessanger/test/: addressbook.cc  addressbook.h
